; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/advpack/extr_files.c_free_file_list.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/advpack/extr_files.c_free_file_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.FILELIST* }
%struct.FILELIST = type { %struct.FILELIST* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @free_file_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_file_list(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.FILELIST*, align 8
  %4 = alloca %struct.FILELIST*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load %struct.FILELIST*, %struct.FILELIST** %6, align 8
  store %struct.FILELIST* %7, %struct.FILELIST** %4, align 8
  br label %8

8:                                                ; preds = %11, %1
  %9 = load %struct.FILELIST*, %struct.FILELIST** %4, align 8
  %10 = icmp ne %struct.FILELIST* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %8
  %12 = load %struct.FILELIST*, %struct.FILELIST** %4, align 8
  %13 = getelementptr inbounds %struct.FILELIST, %struct.FILELIST* %12, i32 0, i32 0
  %14 = load %struct.FILELIST*, %struct.FILELIST** %13, align 8
  store %struct.FILELIST* %14, %struct.FILELIST** %3, align 8
  %15 = load %struct.FILELIST*, %struct.FILELIST** %4, align 8
  %16 = call i32 @free_file_node(%struct.FILELIST* %15)
  %17 = load %struct.FILELIST*, %struct.FILELIST** %3, align 8
  store %struct.FILELIST* %17, %struct.FILELIST** %4, align 8
  br label %8

18:                                               ; preds = %8
  ret void
}

declare dso_local i32 @free_file_node(%struct.FILELIST*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
